vlib/v/checker/tests/globals_error.out
vlib/v/checker/tests/globals_error.v:2:1: error: use `v --enable-globals ...` to enable globals
    1 |
    2 | __global rfcnt int
      | ~~~~~~~~
    3 |
    4 | fn abc(){
