vlib/v/checker/tests/globals_error.vv

__global rfcnt int

fn abc(){
	rfcnt = 2
}

fn main(){
	rfcnt = 1
	abc()
	println('rfcnt: $rfcnt')
}
